--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    app:layout_anchorGravity="center">
 
   <!--ЭТО ФОН-->
 
@@ -22,110 +24,8 @@
       app:layout_constraintVertical_bias="0.644" />
 
   <!--ЭТО ГЛАВНОЕ ПОЛЕ-->
-  <LinearLayout
-      android:layout_width="756dp"
-      android:layout_height="215dp"
-      android:orientation="horizontal"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.13999999">
 
-    <!--ЭТО ПОЛЕ ДЛЯ ПЕРВОГО ПЕРСОНАЖА -->
-
-
-    <LinearLayout
-        android:id="@+id/pers1"
-        android:layout_width="190dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-      <!--ЭТА КНОПКА ВЫБОРА ПЕРСОНАЖА-->
-
-      <Button
-          android:id="@+id/Artur"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:text="Button" />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:src="@drawable/artur_stick"
-          android:visibility="visible" />
-
-    </LinearLayout>
-
-    <!--ЭТО ВТОРОЕ ПОЛЕ ДЛЯ ВЫБОРА ПЕРСОНАЖА-->
-
-    <LinearLayout
-        android:id="@+id/pers2"
-        android:layout_width="190dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-      <!--ЭТО КНОПКА ВТОРОГО ПЕРСОНАЖА-->
-
-      <Button
-          android:id="@+id/Rasul"
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:text="Button" />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:src="@drawable/rasul_stick"
-          android:visibility="visible" />
-
-    </LinearLayout>
-
-
-    <!--ЭТА ТРЕТЬЕ ПОЛЕ ПЕРСОНАЖА-->
-    <LinearLayout
-        android:id="@+id/pers3"
-        android:layout_width="190dp"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-
-      <!--ЭТА ЭТО КНОПКА ТРЕТЬЕГО ПЕРСОНАЖА-->
-      <Button
-          android:id="@+id/Nail"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:text="Button" />
-
-
-    </LinearLayout>
-
-
-    <!--ЭТЩ ЧЕТВЕРТОЕ ПОЛЕ ДЛЯ ПЕРСОНАЖА-->
-    <LinearLayout
-        android:id="@+id/pers4"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-      <!--ЭТО КНОПКА ЧЕТВЕРТОГО ПЕРСОНАЖА-->
-      <Button
-          android:id="@+id/Zayn"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_weight="1"
-          android:text="Button" />
-      <ImageView
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:src="@drawable/zayn_stick"
-          android:visibility="visible" />
-
-    </LinearLayout>
-  </LinearLayout>
-
-  <!--ЭТО ПОЛЕ ДЛЯ КНОПКИ START-->
+    <!--ЭТО ПОЛЕ ДЛЯ КНОПКИ START-->
   <LinearLayout
       android:id="@+id/linearLayout"
       android:layout_width="205dp"
@@ -138,44 +38,101 @@
       app:layout_constraintStart_toStartOf="parent">
 
     <!--ЭТO КНОПКА START-->
-    <Button
-        android:id="@+id/go"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:layout_marginBottom="16dp"
-        android:onClick="onClickMain3"
-        android:text="Бой"
-        app:layout_constraintBottom_toBottomOf="parent" />
+      <Button
+          android:id="@+id/go"
+          android:layout_width="match_parent"
+          android:layout_height="70dp"
+          android:layout_marginBottom="16dp"
+          android:onClick="OnClickListener"
+          android:text="Бой"
+          android:visibility="visible"
+          app:layout_constraintBottom_toBottomOf="parent" />
 
 
   </LinearLayout>
 
-  <LinearLayout
-      android:layout_width="226dp"
-      android:layout_height="89dp"
-      android:layout_marginBottom="80dp"
-      android:gravity="center"
-      android:orientation="horizontal"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.475"
-      app:layout_constraintStart_toStartOf="parent">
-
-    <TextView
-        android:id="@+id/Eror"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:foregroundGravity="center_vertical"
+    <LinearLayout
+        android:layout_width="226dp"
+        android:layout_height="89dp"
+        android:layout_marginBottom="80dp"
         android:gravity="center"
-        android:text="Выберите персонажей"
-        android:textColor="#FF0000"
-        android:textColorHighlight="#FFFFFF"
-        android:textColorHint="#FF0000"
-        android:textColorLink="#FF0000"
-        android:visibility="gone"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-  </LinearLayout>
+        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/Eror"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:foregroundGravity="center_vertical"
+            android:gravity="center"
+            android:text="Выберите персонажей"
+            android:textColor="#FF0000"
+            android:textColorHighlight="#FFFFFF"
+            android:textColorHint="#FF0000"
+            android:textColorLink="#FF0000"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+    </LinearLayout>
+
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:id="@+id/aaa"
+        android:layout_width="787dp"
+
+        android:layout_height="199dp"
+        android:foregroundGravity="center"
+        android:gravity="center|end"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.26">
+
+
+        <ImageButton
+            android:id="@+id/Artur"
+            style="@style/ToggleButtonWithIconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/artur_stick" />
+
+        <ImageButton
+            android:id="@+id/Rasul"
+            style="@style/ToggleButtonWithIconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/rasul_stick" />
+
+        <ImageButton
+            android:id="@+id/Nail"
+            style="@style/ToggleButtonWithIconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/artur_stick" />
+
+        <ImageButton
+            android:id="@+id/Zayn"
+            style="@style/ToggleButtonWithIconOnly"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/zayn_stick" />
+    </com.google.android.material.button.MaterialButtonToggleGroup>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
